cleanup [java]: formatting
GitOrigin-RevId: 492267d3299e5f542ee62f219af2ab2ba5cee321